# newrelic-sb-sdk

./: .editorconfig  .gitignore  .gitlab-ci.yml  .isort.cfg  .markdownlint.json  .markdownlint.yml  .mdlrc.rb  .pre-commit-config.yaml  .pylintrc  .python-version  .shellcheckrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  _config.yml  _toc.yml  docker-compose.yml  myst.yml  pyproject.toml  requirements.dev.txt  requirements.txt  settings.ini  setup.cfg  tbump.toml
.github/workflows/: jupyter-book.yml
_site/: footer.md  site.yml
_static/css/: custom.css
devops/pypi/: a_pycqa_3_upload_coverage.sh  setup_variables.sh
devops/python/: build_docs_with_jupyterbook.sh  build_package.sh  execute_tests.sh  publish_docs_to_gitlab_pages.sh  publish_package_to_pypi.sh  setup_dependencies.sh  setup_docs_dependencies.sh  setup_pypi_credentials.sh  setup_uv.sh  setup_variables.sh  upload_coverage.sh
notebooks/: nerdgraph-schema.json  nerdgraph.py  new-relic-schema.json  newrelic.py  sample_dashboard.json  untitled.txt
notebooks/Alerts/: Alerts.ipynb  Enums.ipynb  Index.ipynb  Utils.ipynb
notebooks/Client/: Client.ipynb  Index.ipynb
notebooks/Core/: Base.ipynb  Core.ipynb  Encoders.ipynb  Index.ipynb  Mixins.ipynb
notebooks/Dashboards/: Dashboards.ipynb  Enums.ipynb  Index.ipynb  Pages.ipynb  Utils.ipynb  Widgets.ipynb
notebooks/Generator/: NerdGraph Schema to Notebooks.ipynb
notebooks/GraphQL/: Enums.ipynb  GraphQL.ipynb  Index.ipynb  Input Objects.ipynb  NerdGraph Schema to Notebooks.ipynb  Objects.ipynb  Scalars.ipynb  nerdgraph-schema.json
notebooks/Inventory/: Dashboards - Backend.ipynb  Dhasboards - Infrastructure.ipynb  Index.ipynb  Inventory.ipynb  Pages - Backend.ipynb  Pages - Infrastructure.ipynb  Widgets - Backend.ipynb  Widgets - Frontend - Browser.ipynb  Widgets - Infrastructure - K8s.ipynb  Widgets - Infrastructure - OnHost Integrations.ipynb  Widgets - Infrastructure - OnPremise.ipynb
notebooks/Shortcuts/: Accounts.ipynb  Credentials.ipynb  Dashboards.ipynb  Historical Data Export.ipynb  Index.ipynb  Nrql.ipynb
notebooks/Utils/: Download.ipynb  Exceptions.ipynb  Index.ipynb  Query.ipynb  Response.ipynb  Text.ipynb  Validators.ipynb
notebooks/_assets/: README.md
prompts/: changelog_generator.txt
src/: pyproject.toml
src/newrelic_sb_sdk/: __init__.py  _modidx.py  version.py
src/newrelic_sb_sdk/client/: __init__.py
src/newrelic_sb_sdk/core/: base.py  encoders.py  mixins.py  query.py  response.py
src/newrelic_sb_sdk/graphql/: __init__.py  enums.py  input_objects.py  objects.py  scalars.py
src/newrelic_sb_sdk/shortcuts/: accounts.py  credentials.py  dashboards.py  historical_data_export.py  nrql.py
src/newrelic_sb_sdk/utils/: download.py  exceptions.py  query.py  response.py  text.py  validators.py
tests/: test_client.ipynb  test_client_client.ipynb  test_shortcuts_accounts.ipynb  test_shortcuts_credentials.ipynb  test_shortcuts_dashboards.ipynb  test_shortcuts_historical_data_export.ipynb  test_shortcuts_nrql.ipynb  test_utils_download.ipynb  test_utils_exceptions.ipynb  test_utils_query.ipynb  test_utils_response.ipynb  test_utils_text.ipynb  test_utils_validators.ipynb
tests/cassettes/: TestShortcutsCredentials.test_get_account.yaml  TestShortcutsCredentials.test_get_all_accounts.yaml  TestShortcutsCredentials.test_get_all_accounts_with_event_types.yaml  TestShortcutsCredentials.test_get_all_accounts_with_event_types_and_time_window.yaml  TestShortcutsCredentials.test_validate.yaml
