[tool.poetry]
name = "account-exploration"
version = "0.1.0"
description = ""
authors = ["zodiacfirework <martin.vuelta@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.4"
ipywidgets = "^7.7.0"
jupyter-book = "^0.13.0"
jupyterlab = "^3.4.1"
jupyterlab-widgets = "^1.1.0"
openpyxl = "^3.0.9"
pandas = "^1.4.2"
python-dotenv = "^0.20.0"
requests = "^2.27.1"
tqdm = "^4.64.0"
XlsxWriter = "^3.0.3"
nbdev = "^1.2.11"
ipylab = "^0.5.2"
nbqa = "^1.4.0"
schemdraw = "^0.15"
pydantic = "^1.9.1"
enforce-typing = "^1.0.0"
sgqlc = "^16.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
bandit = "^1.7.4"
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-black = "^0.3.2"
importnb = "^0.7.0"
isort = "^5.10.1"
mypy = "^0.950"
pre-commit = "^2.19.0"
pycodestyle = "^2.8.0"
pydocstyle = "^6.1.1"
pylint = "^2.13.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
