[tool.poetry]
name = "nr-automation"
version = "0.1.0"
description = "New Relic Automation package for Dashboards and Alerts"
authors = ["SoftButterfly Development Team <dev@softbutterfly.io>"]
license = "MIT License"
readme = "README.md"
keywords = ["Softbutterfly", "New Relic", "Automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "nr_automation", from = "src" }
]
include = [
  "LICENSE.txt",
  "CHANGELOG.md",
]

[tool.poetry.dependencies]
python = "3.10.4"
enforce-typing = "^1.0.0"
requests = "^2.27.1"
sgqlc = "^16.0"
python-dotenv = "^0.20.0"
semver = "^2.13.0"
matplotlib = "^3.6.1"
scipy = "^1.9.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
bandit = "^1.7.4"
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-black = "^0.3.2"
importnb = "^0.7.0"
ipylab = "^0.5.2"
ipywidgets = "^7.7.0"
isort = "^5.10.1"
jupyter-book = "^0.13.0"
jupyterlab = "^3.4.1"
jupyterlab-widgets = "^1.1.0"
mypy = "^0.950"
nbdev = "^1.2.11"
nbqa = "^1.4.0"
pandas = "^1.4.2"
panel = "^0.13.1"
pre-commit = "^2.19.0"
pycodestyle = "^2.8.0"
pydocstyle = "^6.1.1"
pylint = "^2.13.8"
schemdraw = "^0.15"
tqdm = "^4.64.0"
XlsxWriter = "^3.0.3"

[tool.black]
target_version = ['py310']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |\.hg
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |_build
  |buck-out
  |build
  |dist
  |legacy
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
