[project]
name = "newrelic-sb-sdk"
version = "0.43.0"
description = "New Relic SDK to interact with Nerdgraph API."
authors = [
  { name = "Dynova Development Team", email = "dev@dynova.io" },
  { name = "zodiacfireworks", email = "martin.vuelta@gmail.com" }
]
maintainers = [
  { name = "zodiacfireworks", email = "martin.vuelta@gmail.com" }
]
readme = { file = "README.md", content-type = "text/markdown" }
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
keywords = [
  "Softbutterfly",
  "New Relic",
  "SDK",
  "Nerdgraph",
  "NRQL",
  "API",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Networking :: Monitoring",
]
requires-python = ">=3.10.0,<4.0.0"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "sgqlc (>=17.1,<18.0.0)",
]

[project.urls]
Homepage = "https://softbutterfly.gitlab.io/open-source/newrelic-sb-sdk"
Repository = "https://gitlab.com/softbutterfly/open-source/newrelic-sb-sdk"
Documentation = "https://softbutterfly.gitlab.io/open-source/newrelic-sb-sdk"
Issues = "https://gitlab.com/softbutterfly/open-source/newrelic-sb-sdk/-/issues"
Download = "https://gitlab.com/softbutterfly/open-source/newrelic-sb-sdk/-/archive/v0.43.0/newrelic-sb-sdk-v0.43.0.zip"
Changelog = "https://gitlab.com/softbutterfly/open-source/newrelic-sb-sdk/-/blob/v0.43.0/CHANGELOG.md"

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "bandit>=1.9.2",
    "black>=25.12.0",
    "coverage>=7.13.0",
    "deepdiff[optimize]>=8.6.1",
    "flake8>=7.3.0",
    "flake8-black>=0.4.0",
    "importnb>=2023.11.1",
    "isort>=7.0.0",
    "jupyter-book>=2.1.0",
    "jupyterlab>=4.5.1",
    "mypy>=1.19.1",
    "nbdev>=2.4.7",
    "nbmake>=1.5.5",
    "nbqa[toolchain]>=1.9.1",
    "poethepoet>=0.38.0",
    "pre-commit>=4.5.1",
    "pycodestyle>=2.14.0",
    "pydocstyle>=6.3.0",
    "pygments-sb-nrql>=0.7.0",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-vcr>=1.0.2",
    "ruff>=0.14.10",
    "tbump>=6.11.0",
    "tox>=4.32.0",
    "types-requests>=2.32.4.20250913",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "newrelic_sb_sdk"
module-root = "src"
source-include = [
  "LICENSE.txt",
  "README.md",
  "CHANGELOG.md",
]

[tool.poe.tasks]
"lint"            = "uv run pre-commit run --all"
"test"            = "uv run pytest --cov newrelic_sb_sdk --cov-report xml:cobertura.xml --cov-report term --junitxml report.xml"
"schema:update"   = "uv run jupyter nbconvert --to notebook --inplace --execute 'notebooks/GraphQL/NerdGraph Schema to Notebooks.ipynb'"
"schema:checkout" = "git checkout 'notebooks/GraphQL/NerdGraph Schema to Notebooks.ipynb'"
"schema:stage"    = "git add notebooks/GraphQL"
"schema:commit"   = "git commit -m 'Update: generate GraphQL notebooks with new schema'"
"package:update"  = "uv run nbdev_export"
"package:stage"   = "git add src"
"package:commit"  = "git commit -m 'Update: refresh src module from notebooks'"
"version:update"  = "uv run tbump --no-push --no-tag"
"freeze"          = "uv export --format requirements.txt --no-group dev --no-hashes --no-annotate --no-header --output-file requirements.txt"
"freeze:dev"      = "uv export --format requirements.txt --all-groups --no-hashes --no-annotate --no-header --output-file requirements.dev.txt"

[tool.poe.tasks."schema:upgrade"]
sequence = [
  { ref = "schema:update"},
  { ref = "schema:checkout"},
  { ref = "lint"},
  { ref = "schema:stage"},
  { ref = "schema:commit"},
]
ignore_fail = true

[tool.poe.tasks."package:upgrade"]
sequence = [
  { ref = "package:update"},
  { ref = "lint"},
  { ref = "package:stage" },
  { ref = "package:commit" },
  { cmd = "git --no-pager diff HEAD~1 HEAD -- > .diff.txt" },
]
ignore_fail = true

[tool.poe.tasks."package:release"]
sequence = [
  { cmd = "git flow release start ${version}"},
  { cmd = "poetry run tbump --no-push --no-tag --non-interactive ${version}" },
  { cmd = "env GIT_EDITOR=: git flow release finish -m 'Release'"},
]
args = [{name = "version", positional = true}]

[tool.black]
target_version = ['py314']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |\.hg
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |_build
  |buck-out
  |build
  |dist
  |legacy
)/
'''
